--- a/app/src/main/res/layout/card_task.xml
+++ b/app/src/main/res/layout/card_task.xml
@@ -10,9 +10,9 @@
     >
 
     <LinearLayout
+        android:background="@drawable/shape"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
         <LinearLayout
