--- a/app/src/main/res/layout/abs_layout.xml
+++ b/app/src/main/res/layout/abs_layout.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tvTitle"
@@ -12,6 +13,6 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="CarJam"
-        android:textColor="#FFFFFF" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
