--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPrimary2">#E9C3D7</color>
     <color name="colorAccent">#D7E9C3</color>
     <color name="white">#FFFFFF</color>
+    <color name="cardColor">#8694a1</color>
 </resources>
