updated logo fixed, profile contact picture bug

--- a/app/src/main/res/layout/abs_layout.xml
+++ b/app/src/main/res/layout/abs_layout.xml
@@ -8,8 +8,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:gravity="left"
+        android:orientation="horizontal"
+        android:paddingRight="50dp">
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="fitStart"
+            app:srcCompat="@mipmap/logo" />
     </LinearLayout>
 
     <LinearLayout
